// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pie component should render correctly 1`] = `
<div
  className="ins-l-pie-wrapper legend-bottom"
  widget-id="test-pie"
  widget-type="InsightsPie"
>
  <div
    className="ins-l-pie"
  >
    <div
      className="ins-c-pie"
      id="test-pie"
    />
  </div>
</div>
`;

exports[`Pie component should render correctly with custom class 1`] = `
<div
  className="ins-l-pie-wrapper legend-bottom"
  widget-id="test-pie"
  widget-type="InsightsPie"
>
  <div
    className="ins-l-pie"
  >
    <div
      className="test pie ins-c-pie"
      id="test-pie"
    />
  </div>
</div>
`;

exports[`Pie component should render correctly with legend 1`] = `
<div
  className="ins-l-pie-wrapper legend-bottom"
  widget-id="test-pie"
  widget-type="InsightsPie"
>
  <div
    className="ins-l-pie"
  >
    <div
      className="ins-c-pie"
      id="test-pie"
    />
  </div>
  <div
    className="ins-l-pie__legend"
  >
    <div
      className="pie ins-l-pie__legend--item"
      data-id="value1"
      key="value1,5"
    >
      <div
        className="badge-wrapper"
      >
        <ConditionalLink
          key="value1"
          wrap={[Function]}
        >
          <span
            className="badge"
          />
          <span
            className="badge__label"
          >
            value1
          </span>
          <span
            className="badge__number"
          >
            (
            5
            )
          </span>
        </ConditionalLink>
      </div>
    </div>
    <div
      className="pie ins-l-pie__legend--item"
      data-id="value2"
      key="value2,10"
    >
      <div
        className="badge-wrapper"
      >
        <ConditionalLink
          key="value2"
          wrap={[Function]}
        >
          <span
            className="badge"
          />
          <span
            className="badge__label"
          >
            value2
          </span>
          <span
            className="badge__number"
          >
            (
            10
            )
          </span>
        </ConditionalLink>
      </div>
    </div>
    <div
      className="pie ins-l-pie__legend--item"
      data-id="value3"
      key="value3,20"
    >
      <div
        className="badge-wrapper"
      >
        <ConditionalLink
          key="value3"
          wrap={[Function]}
        >
          <span
            className="badge"
          />
          <span
            className="badge__label"
          >
            value3
          </span>
          <span
            className="badge__number"
          >
            (
            20
            )
          </span>
        </ConditionalLink>
      </div>
    </div>
    <div
      className="pie ins-l-pie__legend--item"
      data-id="value4"
      key="value4,40"
    >
      <div
        className="badge-wrapper"
      >
        <ConditionalLink
          key="value4"
          wrap={[Function]}
        >
          <span
            className="badge"
          />
          <span
            className="badge__label"
          >
            value4
          </span>
          <span
            className="badge__number"
          >
            (
            40
            )
          </span>
        </ConditionalLink>
      </div>
    </div>
  </div>
</div>
`;

exports[`Pie component should render correctly with legend and links 1`] = `
<div
  className="ins-l-pie-wrapper legend-bottom"
  widget-id="test-pie"
  widget-type="InsightsPie"
>
  <div
    className="ins-l-pie"
  >
    <div
      className="ins-c-pie"
      id="test-pie"
    />
  </div>
  <div
    className="ins-l-pie__legend"
  >
    <div
      className="pie ins-l-pie__legend--item"
      data-id="value1"
      key="value1,5"
    >
      <div
        className="badge-wrapper"
      >
        <ConditionalLink
          condition="/foo/"
          key="value1"
          wrap={[Function]}
        >
          <span
            className="badge"
          />
          <span
            className="badge__label"
          >
            value1
          </span>
          <span
            className="badge__number"
          >
            (
            5
            )
          </span>
        </ConditionalLink>
      </div>
    </div>
    <div
      className="pie ins-l-pie__legend--item"
      data-id="value2"
      key="value2,10"
    >
      <div
        className="badge-wrapper"
      >
        <ConditionalLink
          condition="/foo/"
          key="value2"
          wrap={[Function]}
        >
          <span
            className="badge"
          />
          <span
            className="badge__label"
          >
            value2
          </span>
          <span
            className="badge__number"
          >
            (
            10
            )
          </span>
        </ConditionalLink>
      </div>
    </div>
    <div
      className="pie ins-l-pie__legend--item"
      data-id="value3"
      key="value3,20"
    >
      <div
        className="badge-wrapper"
      >
        <ConditionalLink
          condition="/foo/"
          key="value3"
          wrap={[Function]}
        >
          <span
            className="badge"
          />
          <span
            className="badge__label"
          >
            value3
          </span>
          <span
            className="badge__number"
          >
            (
            20
            )
          </span>
        </ConditionalLink>
      </div>
    </div>
    <div
      className="pie ins-l-pie__legend--item"
      data-id="value4"
      key="value4,40"
    >
      <div
        className="badge-wrapper"
      >
        <ConditionalLink
          condition="/foo/"
          key="value4"
          wrap={[Function]}
        >
          <span
            className="badge"
          />
          <span
            className="badge__label"
          >
            value4
          </span>
          <span
            className="badge__number"
          >
            (
            40
            )
          </span>
        </ConditionalLink>
      </div>
    </div>
  </div>
</div>
`;

exports[`Pie component should render correctly with legend on the left 1`] = `
<div
  className="ins-l-pie-wrapper legend-left"
  widget-id="test-pie"
  widget-type="InsightsPie"
>
  <div
    className="ins-l-pie"
  >
    <div
      className="ins-c-pie"
      id="test-pie"
    />
  </div>
  <div
    className="ins-l-pie__legend"
  >
    <div
      className="pie ins-l-pie__legend--item"
      data-id="value1"
      key="value1,5"
    >
      <div
        className="badge-wrapper"
      >
        <ConditionalLink
          condition="/foo/"
          key="value1"
          wrap={[Function]}
        >
          <span
            className="badge"
          />
          <span
            className="badge__label"
          >
            value1
          </span>
          <span
            className="badge__number"
          >
            (
            5
            )
          </span>
        </ConditionalLink>
      </div>
    </div>
    <div
      className="pie ins-l-pie__legend--item"
      data-id="value2"
      key="value2,10"
    >
      <div
        className="badge-wrapper"
      >
        <ConditionalLink
          condition="/foo/"
          key="value2"
          wrap={[Function]}
        >
          <span
            className="badge"
          />
          <span
            className="badge__label"
          >
            value2
          </span>
          <span
            className="badge__number"
          >
            (
            10
            )
          </span>
        </ConditionalLink>
      </div>
    </div>
    <div
      className="pie ins-l-pie__legend--item"
      data-id="value3"
      key="value3,20"
    >
      <div
        className="badge-wrapper"
      >
        <ConditionalLink
          condition="/foo/"
          key="value3"
          wrap={[Function]}
        >
          <span
            className="badge"
          />
          <span
            className="badge__label"
          >
            value3
          </span>
          <span
            className="badge__number"
          >
            (
            20
            )
          </span>
        </ConditionalLink>
      </div>
    </div>
    <div
      className="pie ins-l-pie__legend--item"
      data-id="value4"
      key="value4,40"
    >
      <div
        className="badge-wrapper"
      >
        <ConditionalLink
          condition="/foo/"
          key="value4"
          wrap={[Function]}
        >
          <span
            className="badge"
          />
          <span
            className="badge__label"
          >
            value4
          </span>
          <span
            className="badge__number"
          >
            (
            40
            )
          </span>
        </ConditionalLink>
      </div>
    </div>
  </div>
</div>
`;

exports[`Pie component should render correctly with legend on top and links 1`] = `
<div
  className="ins-l-pie-wrapper legend-top"
  widget-id="test-pie"
  widget-type="InsightsPie"
>
  <div
    className="ins-l-pie"
  >
    <div
      className="ins-c-pie"
      id="test-pie"
    />
  </div>
  <div
    className="ins-l-pie__legend"
  >
    <div
      className="pie ins-l-pie__legend--item"
      data-id="value1"
      key="value1,5"
    >
      <div
        className="badge-wrapper"
      >
        <ConditionalLink
          condition="/foo/"
          key="value1"
          wrap={[Function]}
        >
          <span
            className="badge"
          />
          <span
            className="badge__label"
          >
            value1
          </span>
          <span
            className="badge__number"
          >
            (
            5
            )
          </span>
        </ConditionalLink>
      </div>
    </div>
    <div
      className="pie ins-l-pie__legend--item"
      data-id="value2"
      key="value2,10"
    >
      <div
        className="badge-wrapper"
      >
        <ConditionalLink
          condition="/foo/"
          key="value2"
          wrap={[Function]}
        >
          <span
            className="badge"
          />
          <span
            className="badge__label"
          >
            value2
          </span>
          <span
            className="badge__number"
          >
            (
            10
            )
          </span>
        </ConditionalLink>
      </div>
    </div>
    <div
      className="pie ins-l-pie__legend--item"
      data-id="value3"
      key="value3,20"
    >
      <div
        className="badge-wrapper"
      >
        <ConditionalLink
          condition="/foo/"
          key="value3"
          wrap={[Function]}
        >
          <span
            className="badge"
          />
          <span
            className="badge__label"
          >
            value3
          </span>
          <span
            className="badge__number"
          >
            (
            20
            )
          </span>
        </ConditionalLink>
      </div>
    </div>
    <div
      className="pie ins-l-pie__legend--item"
      data-id="value4"
      key="value4,40"
    >
      <div
        className="badge-wrapper"
      >
        <ConditionalLink
          condition="/foo/"
          key="value4"
          wrap={[Function]}
        >
          <span
            className="badge"
          />
          <span
            className="badge__label"
          >
            value4
          </span>
          <span
            className="badge__number"
          >
            (
            40
            )
          </span>
        </ConditionalLink>
      </div>
    </div>
  </div>
</div>
`;

exports[`Pie component should render correctly with no legend 1`] = `
<div
  className="ins-l-pie-wrapper legend-bottom"
  widget-id="test-pie"
  widget-type="InsightsPie"
>
  <div
    className="ins-l-pie"
  >
    <div
      className="ins-c-pie"
      id="test-pie"
    />
  </div>
</div>
`;

exports[`Pie component should render correctly with width and height of 300px, legend on top, with links 1`] = `
<div
  className="ins-l-pie-wrapper legend-top"
  widget-id="test-pie"
  widget-type="InsightsPie"
>
  <div
    className="ins-l-pie"
  >
    <div
      className="ins-c-pie"
      id="test-pie"
    />
  </div>
  <div
    className="ins-l-pie__legend"
  >
    <div
      className="pie ins-l-pie__legend--item"
      data-id="value1"
      key="value1,5"
    >
      <div
        className="badge-wrapper"
      >
        <ConditionalLink
          condition="/foo/"
          key="value1"
          wrap={[Function]}
        >
          <span
            className="badge"
          />
          <span
            className="badge__label"
          >
            value1
          </span>
          <span
            className="badge__number"
          >
            (
            5
            )
          </span>
        </ConditionalLink>
      </div>
    </div>
    <div
      className="pie ins-l-pie__legend--item"
      data-id="value2"
      key="value2,10"
    >
      <div
        className="badge-wrapper"
      >
        <ConditionalLink
          condition="/foo/"
          key="value2"
          wrap={[Function]}
        >
          <span
            className="badge"
          />
          <span
            className="badge__label"
          >
            value2
          </span>
          <span
            className="badge__number"
          >
            (
            10
            )
          </span>
        </ConditionalLink>
      </div>
    </div>
    <div
      className="pie ins-l-pie__legend--item"
      data-id="value3"
      key="value3,20"
    >
      <div
        className="badge-wrapper"
      >
        <ConditionalLink
          condition="/foo/"
          key="value3"
          wrap={[Function]}
        >
          <span
            className="badge"
          />
          <span
            className="badge__label"
          >
            value3
          </span>
          <span
            className="badge__number"
          >
            (
            20
            )
          </span>
        </ConditionalLink>
      </div>
    </div>
    <div
      className="pie ins-l-pie__legend--item"
      data-id="value4"
      key="value4,40"
    >
      <div
        className="badge-wrapper"
      >
        <ConditionalLink
          condition="/foo/"
          key="value4"
          wrap={[Function]}
        >
          <span
            className="badge"
          />
          <span
            className="badge__label"
          >
            value4
          </span>
          <span
            className="badge__number"
          >
            (
            40
            )
          </span>
        </ConditionalLink>
      </div>
    </div>
  </div>
</div>
`;
